--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -158,8 +158,3 @@ a.resume, section > .container > :last-child{
     padding-left:.5em;
 }
 
-/*a.DLresume{
-	margin: 0 auto !important;
-	width: 190px !important;
-	text-align: center;
-}*/
