--- a/css/style.css
+++ b/css/style.css
@@ -470,17 +470,16 @@ ol.default li{
 	}	
 
 
-a.DLresume{
+.DLresume a{
 	background-color:#b9b9cb; 
 	color: #6e6d97;  
 	padding: 5px 20px 5px 20px;
 	font-weight: 300; 
 	font-size:1em;
-	width: auto !important;
 	max-width: 190px;
 }
 
-a.DLresume:hover {
+.DLresume a:hover {
 	background-color:#6e6d97; 
 	color: #fff;  
 	}
